--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,74 @@ body {
     line-height: 1.4;
 }
 
+
+/*Drop Down Nav*/
+
+.navbar {
+    overflow: hidden;
+    background-color: #772E25;
+  }
+  
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  .dropdown .drop-button {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+
+  .drop-button {
+    color: white;
+  }
+  
+  .navbar a:hover, .dropdown:hover .drop-button {
+    background-color: #197278;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: #283d3b;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+
 /*GS-Headers*/
 h1, h2 {
     font-family: "Josefin Sans", sans-serif;
@@ -147,8 +215,8 @@ header .content-wrapper {
 
 .download-link {
     position: fixed;
-    top: 5px;
-    left: 5px;
+    top: 60px;
+    left: 10px;
     font-size: 1.6rem;
 }
 
